objects/Internal_Discussion__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <inlineHelpText>email body or comments</inlineHelpText>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <inlineHelpText>linked case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Internal Discussions</relationshipLabel>
        <relationshipName>Internal_Discussions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <inlineHelpText>email address of send</inlineHelpText>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>email or posting subject</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Internal Discussion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{00000000}</displayFormat>
        <label>Thread Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Discussions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>